			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2638 2004/07/07 10:34:14 suz Exp $

<200407>
2004-07-07  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/{in6.c, in6_src.c, nd6.c, nd6_rtr.c): freebsd5+kame 
	starts up properly (other behavior is to be confirmed).

2004-07-06  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netkey/key.c (key_spddump, key_dump): fixed possible
	infinite loops.

2004-07-06  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/kame/pim6[sd]d/vif.c: fixed a bug that pim6[sd]d cannot receive
	PIM messages on MLDv2-ready kernel.

2004-07-05  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6_rtr.c (prelist_update): ignored manually
	configured addresses to decide whether to autoconfigure a new
	address from an RA. (This is a clarification in rfc2462bis-02.)

2004-07-05  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/mld6.c: use as high clock granularity as
	possible (i.e., per 10 msec) for protocol timers.

2004-07-05  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/(many places): revised delay for DAD according
	to rfc2462bis-02: impose a random delay (when necessary) before
	sending the corresponding MLD report, while still listening to the
	multicast group, not just delaying a DAD NS.

2004-07-03  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ip6_output.c (ip6_ctloutput): fixed the use of
	an uninitialized pointer for the IPV6_IPSEC_POLICY socket option
	on FreeBSD.  All FreeBSD users using IPv6 IPsec must apply this
	fix.  Snaps since 20040524 are affected.

<200406>
2004-06-30  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/name6.c (_dns_ghbyaddr): plugged a memory
	leak.  All KAME snaps need this fix, and it is recommended to
	update libinet6 and all snap applications with this fix.

2004-06-16  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6.c (in6_update_ifa): do not attempt to join